--- a/so-resto-nois-front/package.json
+++ b/so-resto-nois-front/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
+    "react-router-dom": "^6.14.0",
+    "sort-by": "^1.2.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
